<resources>
    <string name="app_name">DnD Sheet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DnD Sheets</string>
    <string name="nav_header_subtitle">your DnD Sheets App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sheet">Sheet</string>
    <string name="menu_setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_sheet">Create New Sheet</string>
    <string name="load_sheet">Load Sheet</string>
    <string name="_0">0</string>
    <string name="default_race">Default Race</string>
    <string name="default_name">Default Name</string>
</resources>
