<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dev.mathitos.dndsheet.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sheet"
        android:name="dev.mathitos.dndsheet.sheet.SheetFragment"
        android:label="@string/menu_sheet"
        tools:layout="@layout/fragment_sheet" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="dev.mathitos.dndsheet.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>