<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="@drawable/primary_button"
    android:layout_marginBottom="15dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name"
            android:textColor="@color/colorDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_race"
            android:textColor="@color/colorDarkest"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/_0"
        android:textColor="@color/colorDark"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>