<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sheet"
            type="dev.mathitos.dndsheet.entities.Sheet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:orientation="vertical"
                android:padding="8dp"

                >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{sheet.name}"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/default_name" />

                <TextView
                    android:id="@+id/race"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@{sheet.race.name()}"
                    tools:text="@string/default_race"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button"
                android:padding="15dp"
                android:text="@{sheet.level}"
                tools:text="@string/_0"
                android:textColor="@color/colorDark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_container">

            <TextView
                android:id="@+id/Acrobatics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_race"
                android:textColor="@color/colorDarkest"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>